manifests-failed/dbgate-v2024.6.4.tgz-manifest.yaml
---
# Source: dbgate/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-dbgate
  namespace: dbgate-v2024.6.4.tgz
  labels:
    helm.sh/chart: dbgate-v2024.6.4
    app.kubernetes.io/name: dbgate
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v2024.6.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dbgate
    app.kubernetes.io/instance: my-release
---
# Source: dbgate/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-dbgate
  namespace: dbgate-v2024.6.4.tgz
  labels:
    helm.sh/chart: dbgate-v2024.6.4
    app.kubernetes.io/name: dbgate
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v2024.6.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dbgate
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dbgate
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-dbgate
      securityContext:
        {}
      containers:
        - name: dbgate
          securityContext:
            null
          image: "dbgate/dbgate:alpine"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: dbgate/templates/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-release-dbgate
  namespace: dbgate-v2024.6.4.tgz
spec:
  gatewayClassName: ace
  listeners:
    - name: my-release-dbgate
      protocol: HTTPS
      port: 8082
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: service-presets-cert
          namespace: ace
        mode: Terminate
---
# Source: dbgate/templates/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-release-dbgate
  namespace: dbgate-v2024.6.4.tgz
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: my-release-dbgate
      namespace: dbgate-v2024.6.4.tgz
      sectionName: my-release-dbgate
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: "dbgate.....kubedb.test"
---
# Source: dbgate/templates/gw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: dbui-cert-dbgate-v2024.6.4.tgz
  namespace: ace
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: dbgate-v2024.6.4.tgz
  to:
  - group: ""
    kind: Secret
    name: service-presets-cert
---
# Source: dbgate/templates/gw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: dbui-httproute-dbgate-v2024.6.4.tgz
  namespace: keda
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: dbgate-v2024.6.4.tgz
  to:
  - group: ""
    kind: Service
    name: keda-add-ons-http-interceptor-proxy
